--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "immutable": "^3.8.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-icons": "^2.2.7",
     "slate": "^0.33.6",
     "slate-edit-code": "^0.15.0",
     "slate-react": "^0.12.6",
     "style-loader": "^0.21.0",
+    "styled-components": "^3.3.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3"
@@ -44,7 +46,5 @@
     "type": "git",
     "url": ""
   },
-  "dependencies": {
-    "styled-components": "^3.3.0"
-  }
+  "dependencies": {}
 }
