--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "immutable": "^3.8.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-dropzone": "^4.2.10",
     "react-icons": "^2.2.7",
+    "react-modal": "^3.4.4",
     "slate": "^0.33.6",
+    "slate-auto-replace": "^0.9.1",
     "slate-edit-code": "^0.15.0",
+    "slate-edit-list": "^0.11.3",
     "slate-react": "^0.12.6",
     "style-loader": "^0.21.0",
     "styled-components": "^3.3.0",
