--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-modal": "^3.4.4",
     "slate": "^0.33.6",
     "slate-auto-replace": "^0.9.1",
+    "slate-drop-or-paste-images": "^0.8.2",
     "slate-edit-code": "^0.15.0",
     "slate-edit-list": "^0.11.3",
     "slate-react": "^0.12.6",
