--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "slate": "^0.33.6",
     "slate-auto-replace": "^0.9.1",
     "slate-drop-or-paste-images": "^0.8.2",
+    "slate-edit-blockquote": "^0.6.1",
     "slate-edit-code": "^0.15.0",
     "slate-edit-list": "^0.11.3",
     "slate-react": "^0.12.6",
+    "slate-soft-break": "^0.6.1",
     "style-loader": "^0.21.0",
     "styled-components": "^3.3.0",
     "webpack": "^4.6.0",
