--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "react-component-example-project",
-  "version": "0.1.0",
-  "description":
-    "A minimal boilerplate for building a react component for npm, including a demo page.",
+  "name": "@kfcoding/kfeditor",
+  "version": "0.0.14",
+  "description": "Kfeditor",
   "main": "lib/index.js",
   "scripts": {
     "dev": "concurrently \"npm run lib:watch\" \"npm run docs\"",
@@ -25,20 +24,46 @@
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
     "babel-loader": "^8.0.0-beta.0",
-    "concurrently": "^3.5.1",
+    "concurrently": "^3.6.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3"
   },
-  "author": "Markus Englund <markus.s.englund@gmail.com>",
-  "homepage": "https://github.com/yogaboll/react-npm-component-starter",
+  "author": "guodong",
+  "homepage": "https://github.com/kfcoding/kfeditor",
   "repository": {
     "type": "git",
-    "url": "git@github.com:yogaboll/react-npm-component-starter.git"
+    "url": "git@github.com:kfcoding/kfeditor.git"
+  },
+  "dependencies": {
+    "@canner/slate-constant": "^1.0.9",
+    "@canner/slate-icon-blockquote": "^1.2.9",
+    "@canner/slate-icon-codeblock": "^1.2.9",
+    "@canner/slate-icon-header": "^1.2.9",
+    "antd": "^3.6.3",
+    "babel-plugin-import": "^1.8.0",
+    "canner-slate-editor": "^0.4.4",
+    "get-selection-range": "^0.1.0",
+    "immutable": "^3.8.2",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "normalize.css": "^8.0.0",
+    "npm": "^6.1.0",
+    "react-icons": "^2.2.7",
+    "react-modal": "^3.4.5",
+    "slate": "^0.34.2",
+    "slate-auto-replace": "^0.9.1",
+    "slate-edit-code": "^0.15.3",
+    "slate-hyperscript": "^0.5.15",
+    "slate-md-editor": "^0.3.3",
+    "slate-no-empty": "^0.1.0",
+    "slate-prism": "^0.5.0",
+    "slate-react": "^0.12.11",
+    "slate-schema-violations": "^0.1.13"
   }
 }
