[Add] Add format mark

--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "antd": "^3.6.3",
     "babel-plugin-import": "^1.8.0",
     "canner-slate-editor": "^0.4.4",
+    "emotion": "^9.2.6",
     "get-selection-range": "^0.1.0",
     "immutable": "^3.8.2",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "normalize.css": "^8.0.0",
     "npm": "^6.1.0",
+    "react-emotion": "^9.2.6",
     "react-icons": "^2.2.7",
     "react-modal": "^3.4.5",
     "slate": "^0.34.2",
